apps/yelb/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-ui
  namespace: yelb
  labels:
    app.kubernetes.io/name: yelb-ui
    app.kubernetes.io/component: ui
    app: yelb
    environment: dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: yelb-ui
      app.kubernetes.io/component: ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yelb-ui
        app.kubernetes.io/component: ui
    spec:
      containers:
        - name: yelb-ui
          image: docker.io/mreferre/yelb-ui:0.10
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
