apps/yelb/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  namespace: yelb
  labels:
    app.kubernetes.io/name: yelb-ui
    app.kubernetes.io/component: ui
    app: yelb
    environment: dev

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: yelb-ui
    app.kubernetes.io/component: ui
  ports:
    - name: http
      port: 80
      targetPort: http
