apps/yelb/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelb-ui
  namespace: yelb
  labels:
    app.kubernetes.io/name: yelb-ui
    app.kubernetes.io/component: ui
    app: yelb
    environment: dev

  annotations:
    cert-manager.io/clusterissuer: htdom-sub-ca
    
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - yelb.htdom.lan
    secretName: yelb-pki-secret
  rules:
  - host: yelb.htdom.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yelb-ui
            port:
              number: 80
